Fix an issue where the autocomplete results overlap the scrollbar.
The new autocomplete results list overlapped the scrollbar on the right,
due to its absolute positioning. We now set the parent <li> with a position:
of 'relative', which will confine the absolute positioning of the child within
its bounds.

Fixes bug #1347

--- a/reviewboard/htdocs/media/rb/css/reviews.css
+++ b/reviewboard/htdocs/media/rb/css/reviews.css
@@ -956,6 +956,7 @@
   cursor: pointer;
   margin: 0;
   padding: 3px 6px;
+  position: relative;
   white-space: nowrap;
 }
 
